--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -2,7 +2,7 @@ name: Demo
 on: [push]
 jobs:
   Run-Mistral-Test-Args:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
       - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
